Many more add-opens and add-exports needed for java 17
Signed-off-by: Rob Stryker <rob@oxbeef.net>