@@ -25,11 +25,15 @@ public class Java9LaunchArgUtil {
 			return suffix;
 
 		int[] versionIDs = JavaUtils.getMajorMinorVersion(vm.getJavaVersion());
-		if (versionIDs.length > 0 && versionIDs[0] >= 9) {
-			suffix = " --add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-					+ " --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
-					+ " --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
-					+ " --add-modules=java.se";
+		if (versionIDs.length > 0 ) {
+			if (versionIDs[0] >= 17) {
+				suffix = "--add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED";
+			} else if (versionIDs[0] >= 9) {
+				suffix = " --add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+						+ " --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+						+ " --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
+						+ " --add-modules=java.se";
+			}
 		}
 		return suffix;
 	}
